# add-determinism

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
rpm/: macros.build-reproducibility
src/: ar.rs  config.rs  lib.rs  main.rs  multiprocess.rs  options.rs  setup.rs  simplelog.rs
src/add_det/: config.rs  main.rs  mod.rs  multiprocess.rs
src/add_det/handlers/: ar.rs  gzip.rs  javadoc.rs  mod.rs  pyc.rs  zip.rs
src/handlers/: ar.rs  gzip.rs  jar.rs  javadoc.rs  mod.rs  pyc.rs  zip.rs
src/linkdupes/: config.rs  fcontexts.rs  linkfiles.rs  main.rs  mod.rs
src/processors/: ar.rs  mod.rs
tests/: test_add_det.rs  test_cases.rs  test_linkdupes.rs  tests.rs
tests/cases/: .gitattributes  adapters.cpython-311~mtime.pyc.fixed  dicto.cpython-313.pyc.fixed  dicto.py  invalid-utf8.html  javadoc-example.fixed.html  javadoc-example.html  libHSbase-compat-batteries-0.12.3-EvvecFThiaEAGWq5U5Tpi9.a.fixed  listo.cpython-313.pyc.fixed  listo.py  testrelro.c
tests/cases/jars/: .gitignore  clojure.jar.fixed  hello.jar.fixed  hello.java
tests/cases/python_stdlib/3.10/: ElementTree.cpython-310.pyc.fixed  __future__.cpython-310.pyc.fixed  __init__.cpython-310.opt-1.pyc.fixed  __init__.cpython-310.opt-2.pyc.fixed  __init__.cpython-310.pyc.fixed  _osx_support.cpython-310.opt-2.pyc.fixed  _threading_local.cpython-310.pyc.fixed  _tzpath.cpython-310.pyc.fixed  _zoneinfo.cpython-310.opt-2.pyc.fixed  ascii.cpython-310.pyc.fixed  async_case.cpython-310.opt-2.pyc.fixed  base_events.cpython-310.opt-1.pyc.fixed  big5hkscs.cpython-310.pyc.fixed  calltip_w.cpython-310.pyc.fixed  chaos.cpython-310.opt-1.pyc.fixed  chunk.cpython-310.pyc.fixed  config.cpython-310.pyc.fixed  configparser.cpython-310.opt-2.pyc.fixed  cp850.pyc.fixed  curses_tests.cpython-310.pyc.fixed  datetime.cpython-310.opt-1.pyc.fixed  difflib.cpython-310.pyc.fixed  dis.cpython-310.pyc.fixed  dummy.cpython-310.opt-2.pyc.fixed  dump.cpython-310.opt-1.pyc.fixed  eintr_tester.cpython-310.pyc.fixed  errors.cpython-310.opt-2.pyc.fixed  events.cpython-310.opt-2.pyc.fixed  expatreader.cpython-310.opt-2.pyc.fixed  factory.cpython-310.pyc.fixed  filelist.cpython-310.pyc.fixed  fix_explicit.cpython-310.pyc.fixed  fix_idioms.cpython-310.pyc.fixed  fix_import.cpython-310.pyc.fixed  fix_set_literal.cpython-310.opt-1.pyc.fixed  fix_xreadlines.cpython-310.opt-1.pyc.fixed  fixer_base.cpython-310.pyc.fixed  fixer_util.cpython-310.pyc.fixed  fork_wait.cpython-310.pyc.fixed  formatter.cpython-310.opt-2.pyc.fixed  (+62 more)
tests/cases/python_stdlib/3.11/: _constants.cpython-311.pyc.fixed  _itertools.cpython-311.opt-1.pyc.fixed  _itertools.cpython-311.pyc.fixed  _legacy.cpython-311.pyc.fixed  _meta.cpython-311.opt-2.pyc.fixed  _parseaddr.cpython-311.opt-2.pyc.fixed  _parser.cpython-311.pyc.fixed  _pyio.cpython-311.opt-2.pyc.fixed  _re.cpython-311.pyc.fixed  _threading_local.cpython-311.pyc.fixed  _tzpath.cpython-311.opt-2.pyc.fixed  aliases.cpython-311.opt-1.pyc.fixed  argparse.cpython-311.opt-1.pyc.fixed  ast.cpython-311.pyc.fixed  base64_codec.cpython-311.opt-1.pyc.fixed  base64mime.cpython-311.opt-2.pyc.fixed  base_subprocess.cpython-311.opt-2.pyc.fixed  build_py.cpython-311.opt-2.pyc.fixed  code.cpython-311.opt-1.pyc.fixed  constants.cpython-311.pyc.fixed  contentmanager.cpython-311.opt-2.pyc.fixed  contextlib.cpython-311.pyc.fixed  conv.cpython-311.opt-1.pyc.fixed  core.cpython-311.opt-1.pyc.fixed  coroutines.cpython-311.opt-2.pyc.fixed  cp1125.cpython-311.opt-1.pyc.fixed  cp858.cpython-311.opt-1.pyc.fixed  cp950.cpython-311.opt-1.pyc.fixed  cygwinccompiler.cpython-311.pyc.fixed  dataclasses.cpython-311.opt-1.pyc.fixed  datetime.cpython-311.opt-2.pyc.fixed  dist.cpython-311.opt-2.pyc.fixed  domreg.cpython-311.pyc.fixed  entities.cpython-311.opt-1.pyc.fixed  errors.cpython-311.opt-1.pyc.fixed  euc_jis_2004.cpython-311.opt-1.pyc.fixed  expatbuilder.cpython-311.pyc.fixed  expatreader.cpython-311.pyc.fixed  extension.cpython-311.opt-1.pyc.fixed  filecmp.cpython-311.opt-1.pyc.fixed  (+60 more)
tests/cases/python_stdlib/3.12/: ElementTree.cpython-312.opt-2.pyc.fixed  __hello__.cpython-312.opt-2.pyc.fixed  __main__.cpython-312.opt-1.pyc.fixed  __main__.cpython-312.opt-2.pyc.fixed  _abc.cpython-312.opt-1.pyc.fixed  _adapters.cpython-312.opt-1.pyc.fixed  _constants.cpython-312.opt-1.pyc.fixed  _legacy.cpython-312.opt-1.pyc.fixed  _osx_support.cpython-312.pyc.fixed  application.cpython-312.opt-2.pyc.fixed  ast.cpython-312.pyc.fixed  base64mime.cpython-312.opt-1.pyc.fixed  base_tasks.cpython-312.pyc.fixed  big5.cpython-312.pyc.fixed  bisect.cpython-312.opt-2.pyc.fixed  build.cpython-312.opt-1.pyc.fixed  bz2.cpython-312.opt-2.pyc.fixed  bz2.cpython-312.pyc.fixed  case.cpython-312.opt-1.pyc.fixed  charset.cpython-312.opt-2.pyc.fixed  cmd.cpython-312.opt-2.pyc.fixed  cp858.cpython-312.pyc.fixed  cp950.cpython-312.pyc.fixed  crypt.cpython-312.pyc.fixed  datetime.cpython-312.opt-1.pyc.fixed  dir_util.cpython-312.opt-1.pyc.fixed  dumb.cpython-312.opt-2.pyc.fixed  dumb.cpython-312.pyc.fixed  filecmp.cpython-312.opt-2.pyc.fixed  fileinput.cpython-312.pyc.fixed  filelist.cpython-312.opt-2.pyc.fixed  fix_buffer.cpython-312.pyc.fixed  fix_funcattrs.cpython-312.pyc.fixed  fix_future.cpython-312.opt-1.pyc.fixed  fix_imports2.cpython-312.opt-2.pyc.fixed  fix_intern.cpython-312.opt-1.pyc.fixed  fix_itertools_imports.cpython-312.opt-2.pyc.fixed  fix_long.cpython-312.opt-2.pyc.fixed  fix_raw_input.cpython-312.opt-1.pyc.fixed  fix_reduce.cpython-312.opt-2.pyc.fixed  (+59 more)
tests/cases/python_stdlib/3.13/: __future__.cpython-313.opt-2.pyc.fixed  __hello__.cpython-313.opt-2.pyc.fixed  _aix_support.cpython-313.opt-2.pyc.fixed  _collections_abc.cpython-313.opt-2.pyc.fixed  _compat_pickle.cpython-313.pyc.fixed  _compression.cpython-313.opt-2.pyc.fixed  (+94 more)
tests/common/: mod.rs
tests/handlers/: mod.rs  test_ar.rs  test_gzip.rs  test_jar.rs  test_javadoc.rs  test_pyc.rs  test_pyc_zero_mtime.rs
tests/processors/: ar.rs  mod.rs
tests/test_handlers/: mod.rs  test_ar.rs  test_gzip.rs  test_jar.rs  test_javadoc.rs  test_pyc.rs  test_pyc_zero_mtime.rs
tests/test_invocation/: mod.rs
(+402 files in other folders)
