[package]
name = "add-determinism"
version = "0.2.0"
edition = "2021"
authors = ["Zbigniew Jędrzejewski-Szmek <zbyszek@in.waw.pl>"]
homepage = "https://github.com/keszybz/add-determinism"
description = "RPM buildroot helper to strip nondeterministic bits in files"
readme = "README.md"
repository = "https://github.com/keszybz/add-determinism"
license = "GPL-3.0-or-later"
keywords = ["rpm", "reproducible-builds"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["python"]
python = ["dep:pyo3"]

[dependencies]
anyhow = "1.0.12"
chrono = "0.4.35"
clap = { version = "4.4.18", features = ["derive"] }
indoc = "2.0.4"
log = { version = "0.4", features = ["std"] }
nix = { version = "0.28.0", features = ["fs", "socket"] }
pyo3 = { version = "0.20.0", optional = true }
regex = { version = "1.10.0", default-features = false, features = ["std", "perf", "unicode-case"] }
time = "0.3.34"
walkdir = "2.5.0"
zip = { version = "0.6.0", default-features = false, features = ["deflate", "deflate-zlib", "time"] }

[dev-dependencies]
tempfile = "3"
ctor = "0.1"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
